--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,14 @@ ul {
     width: 90%;
     margin: auto;
 }
+/********* CABECERA ***********/
+header {
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
+/********* NAVEGACIÓN ***********/
 
 /* Estilos de navegacion */
 
@@ -39,7 +47,7 @@ ul {
 }
 
 .nav-brand {
-    width: 100px;
+    width: 50px;
 }
 
 /* Estilos de navegacion izquierda*/
@@ -64,4 +72,43 @@ ul {
 .nav-main ul.nav-menu {
     flex: 1;
     margin-left: 20px;
+}
+
+/* SHOWCASE DESIGN */
+hr {
+    margin: 10px 0px;
+}
+.showcase {
+    width: 100%;
+    height: 550px;
+    background-image: url("/img/JET2.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end; 
+}
+
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    border: 0px;
+    font-weight: bold;
+    padding: 10px 20px;
+    background: #262626;
+    color: #ffffff;
+    font-size: 15px;
+    border: 1px solid;
+    margin: 10px 0px;
+}
+
+.btn:hover {
+    opacity: 0.6;
+}
+
+.showcase h2, .showcase p {
+    margin-bottom: 10px;
 }
